--- a/for Practice/Bikecharingdemand_prac.ipynb
+++ b/for Practice/Bikecharingdemand_prac.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bike sharing demands\n",
+    "train 기반으로 test set 에측!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
